--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -19,19 +19,20 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://node_2d.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_2d.tscn", "res://main.tscn")
-current_scene=""
+open_scenes=PackedStringArray("res://Scenes/node_2d.tscn", "res://main.tscn")
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
