--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -11,6 +11,8 @@ run_reload_scripts=true
 
 Node2D:scale=true
 AnimatedSprite2D:scale=true
+CPUParticles2D:scale=true
+GPUParticles2D:scale=true
 
 [dialog_bounds]
 
