--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -1,6 +1,7 @@
 [editor_metadata]
 
 executable_path="S:/Godot_v4.2-stable_win64.exe/Godot_v4.2-stable_win64.exe"
+tile_source_sort=0
 
 [debug_options]
 
@@ -14,6 +15,7 @@ AnimatedSprite2D:scale=true
 CPUParticles2D:scale=true
 GPUParticles2D:scale=true
 CharacterBody2D:scale=true
+TileMap:scale=true
 
 [dialog_bounds]
 
