--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -19,6 +19,10 @@ TileMap:scale=true
 Camera2D:zoom=true
 Camera2D:scale=true
 CollisionShape2D:scale=true
+Sprite2D:scale=true
+Container:scale=true
+CanvasModulate:scale=true
+MenuBar:scale=true
 
 [dialog_bounds]
 
@@ -33,3 +37,7 @@ scripts=["res://Scripts/Character.gd"]
 [script_setup]
 
 last_selected_language="GDScript"
+
+[color_picker]
+
+recent_presets=PackedColorArray(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.533333, 1, 1, 0.941176, 0.533333, 1, 0.807843, 0.941176, 0.533333, 1, 0.879525, 0.914316, 0.563424, 1, 0.503026, 0.528265, 0.190899, 1, 0.709755, 0.743776, 0.30862, 1, 0.800806, 0.69712, 0.452078, 1)
