--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Environment/Dirt.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Environment/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,9 +30,8 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://main.tscn", "res://main_char.tscn")
 current_scene="res://main_char.tscn"
 center_split_offset=-244
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
 
 [ScriptEditor]
 
