--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -30,13 +30,13 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://main.tscn", "res://main_char.tscn")
 current_scene="res://main.tscn"
 center_split_offset=-244
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=11
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Character.gd"]
+open_scripts=["res://Scripts/Character.gd", "res://Scripts/TPA.gd"]
 selected_script="res://Scripts/Character.gd"
 open_help=[]
 script_split_offset=52
