--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -32,13 +32,13 @@ current_scene="res://main.tscn"
 center_split_offset=-249
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Character.gd", "res://Scripts/TPA.gd"]
 selected_script="res://Scripts/Character.gd"
-open_help=[]
+open_help=["Camera2D"]
 script_split_offset=52
 list_split_offset=0
 
