--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Character.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Environment/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Grass.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Environment/", "res://Scripts/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://main_char.tscn", "res://Scenes/Grass.tscn", "res://flower.tscn")
-current_scene="res://main.tscn"
-center_split_offset=-248
+current_scene="res://main_char.tscn"
+center_split_offset=-265
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=9
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/anim_handler.gd", "res://Scripts/Character.gd", "res://Scripts/Grass.gd", "res://Scripts/Player_Camera.gd", "res://Scripts/TPA.gd"]
-selected_script="res://Scripts/anim_handler.gd"
+open_scripts=["res://Scripts/anim_handler.gd", "res://Scripts/Character.gd", "res://Scripts/Grass.gd", "res://Scripts/TPA.gd"]
+selected_script="res://Scripts/Character.gd"
 open_help=["Camera2D"]
 script_split_offset=52
 list_split_offset=0
@@ -52,7 +52,7 @@ selected_shader=""
 
 log_filter_0=false
 log_filter_2=false
-log_filter_1=true
+log_filter_1=false
 log_filter_3=true
 log_filter_4=true
 collapse=false
