--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://main_char.tscn", "res://Scenes/Grass.tscn", "res://flower.tscn")
-current_scene="res://main_char.tscn"
+current_scene="res://main.tscn"
 center_split_offset=-265
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/anim_handler.gd", "res://Scripts/Character.gd", "res://Scripts/Grass.gd", "res://Scripts/TPA.gd"]
-selected_script="res://Scripts/Character.gd"
+selected_script="res://Scripts/anim_handler.gd"
 open_help=["Camera2D"]
 script_split_offset=52
 list_split_offset=0
