--- a/Game/.godot/editor/script_editor_cache.cfg
+++ b/Game/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 64,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 15.0,
-"selection": true,
-"selection_from_column": 64,
-"selection_from_line": 20,
-"selection_to_column": 48,
-"selection_to_line": 21,
+"row": 36,
+"scroll_position": 17.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
