--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -12,32 +12,32 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=202
-dock_hsplit_3=-202
+dock_hsplit_2=207
+dock_hsplit_3=-203
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Characters/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Environment/", "res://Sprites/Characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Environment/", "res://Sprites/Characters/", "res://Scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://main_char.tscn", "res://Scenes/Grass.tscn", "res://flower.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn")
+current_scene="res://Scenes/flower.tscn"
 center_split_offset=-265
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/anim_handler.gd", "res://Scripts/Character.gd", "res://Scripts/Grass.gd", "res://Scripts/TPA.gd"]
-selected_script="res://Scripts/anim_handler.gd"
+open_scripts=["res://Scripts/Character.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
+selected_script="res://popup.gd"
 open_help=["Camera2D"]
 script_split_offset=52
 list_split_offset=0
