--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Scenes/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Environment/", "res://Sprites/Characters/", "res://Scripts/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/Environment/", "res://Sprites/Characters/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn")
-current_scene="res://Scenes/flower.tscn"
+current_scene="res://main.tscn"
 center_split_offset=-265
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=9
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
