--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Environment/menu.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Environment/Spikes1.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Environment/", "res://Sprites/Characters/", "res://Scripts/", "res://Audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Scenes/damaging.tscn")
 current_scene="res://main.tscn"
-center_split_offset=-257
+center_split_offset=-30
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Character.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
-selected_script="res://Scripts/Character.gd"
+open_scripts=["res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
+selected_script="res://Scripts/damaging.gd"
 open_help=["Camera2D"]
 script_split_offset=52
 list_split_offset=0
