--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -31,13 +31,13 @@ open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", 
 current_scene="res://main.tscn"
 center_split_offset=-30
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
-selected_script="res://Scripts/damaging.gd"
+selected_script="res://Scripts/Character.gd"
 open_help=["Camera2D"]
 script_split_offset=52
 list_split_offset=0
