--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -19,19 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Environment/Spikes1.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Environment/", "res://Sprites/Characters/", "res://Scripts/", "res://Audio/")
+dock_filesystem_selected_paths=PackedStringArray("res://Sprites/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Scripts/", "res://Audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Scenes/damaging.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Scenes/damaging.tscn")
 current_scene="res://main.tscn"
 center_split_offset=-30
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
