--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
+dock_filesystem_selected_paths=PackedStringArray("res://Audio/Intro song.mp3")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Scripts/", "res://Audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,16 +27,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://character_body_2d.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn")
 current_scene="res://main.tscn"
 center_split_offset=-30
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=9
+selected_main_editor_idx=0
+selected_bottom_panel_item=2
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Character.gd", "res://character_body_2d.gd", "res://Scripts/damaging.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
+open_scripts=["res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://healthbar.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
 selected_script="res://Scripts/Character.gd"
 open_help=["Camera2D"]
 script_split_offset=52
@@ -50,8 +50,8 @@ selected_shader=""
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=false
 log_filter_3=true
 log_filter_4=true
