--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -40,6 +40,8 @@ Polygon2D:texture_scale=true
 Polygon2D:scale=true
 ProgressBar:scale=true
 AudioStreamPlayer2D:scale=true
+ParallaxBackground:scroll_base_scale=true
+ParallaxBackground:scale=true
 
 [dialog_bounds]
 
