--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -60,3 +60,7 @@ last_selected_language="GDScript"
 [color_picker]
 
 recent_presets=PackedColorArray(0.503026, 0.528265, 0.190899, 1, 0.709755, 0.743776, 0.30862, 1, 0.800806, 0.69712, 0.452078, 1, 0.303636, 0.652989, 0.757837, 1, 0.424931, 0.424931, 0.424931, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0.631373, 1, 1, 1, 0.651966, 1, 0.9672, 1)
+
+[export_options]
+
+default_filename="Gembound"
