--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn")
-current_scene="res://main.tscn"
+current_scene="res://Magik/ability_1.tscn"
 center_split_offset=-320
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
