Finished current menu

--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -45,6 +45,7 @@ ParallaxBackground:scale=true
 Marker2D:scale=true
 MarginContainer:scale=true
 MultiNodeEdit:scale=true
+CheckButton:scale=true
 
 [dialog_bounds]
 
