--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -46,6 +46,7 @@ Marker2D:scale=true
 MarginContainer:scale=true
 MultiNodeEdit:scale=true
 CheckButton:scale=true
+TextEdit:scale=true
 
 [dialog_bounds]
 
