Changed Dash speed and fixed menu

--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -47,6 +47,8 @@ MarginContainer:scale=true
 MultiNodeEdit:scale=true
 CheckButton:scale=true
 TextEdit:scale=true
+CenterContainer:scale=true
+TextureRect:scale=true
 
 [dialog_bounds]
 
