--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Silver.ttf")
+dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Sprites/Environment/", "res://Sprites/Characters/", "res://Scripts/", "res://Scenes/", "res://Magik/", "res://Audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn", "res://Magik/menu.tscn", "res://Magik/options_menu.tscn")
-current_scene="res://Magik/menu.tscn"
+current_scene="res://Scenes/main_char.tscn"
 center_split_offset=-320
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://healthbar.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
-selected_script="res://Menu.gd"
+selected_script="res://Scripts/Character.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
