--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -29,3 +29,7 @@ run_reload_scripts=true
 
 scenes=["res://UI/menu.tscn", "res://Enemy.tscn", "res://Magik/options_menu.tscn", "res://Magik/menu.tscn", "res://healthbar.tscn", "res://UI/pause_menu.tscn", "res://Magik/ability_1.tscn", "res://Scenes/Inventory.tscn", "res://popup.tscn", "res://Scenes/flower.tscn"]
 scripts=["res://Enemy.gd"]
+
+[dialog_bounds]
+
+project_settings=Rect2(510, 190, 900, 700)
