--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -33,3 +33,4 @@ scripts=["res://Enemy.gd"]
 [dialog_bounds]
 
 project_settings=Rect2(510, 190, 900, 700)
+create_new_node=Rect2(510, 190, 900, 700)
