--- a/Game/.godot/editor/script_editor_cache.cfg
+++ b/Game/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
-"selection": false,
+"row": 94,
+"scroll_position": 82.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 85,
+"selection_to_column": 26,
+"selection_to_line": 94,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,12 +81,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
+"row": 3,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 36,
+"selection_from_line": 3,
+"selection_to_column": 0,
+"selection_to_line": 4,
 "syntax_highlighter": "GDScript"
 }
 
@@ -175,11 +183,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 0.0,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
