--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -12,6 +12,7 @@ Control:scale=true
 VBoxContainer:scale=true
 Button:scale=true
 Label:scale=true
+ProgressBar:scale=true
 
 [editor_metadata]
 
@@ -19,6 +20,7 @@ executable_path="S:/Godot_v4.2-stable_win64.exe"
 tile_snap_option=0
 tile_snap_subdiv=4.0
 tile_source_sort=0
+use_advanced_connections=false
 
 [debug_options]
 
@@ -34,3 +36,7 @@ scripts=["res://Enemy.gd"]
 
 project_settings=Rect2(510, 190, 900, 700)
 create_new_node=Rect2(510, 190, 900, 700)
+
+[color_picker]
+
+recent_presets=PackedColorArray(1, 0, 1, 1, 0.660493, 0.000325845, 0.660489, 1, 0.760795, 0, 0.173727, 1, 0.774361, 0, 0.177531, 1, 0.925837, 0, 0.22, 1, 1, 1, 1, 1, 0.821329, 0, 0.0438089, 1)
