--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -37,6 +37,7 @@ scripts=["res://global.gd", "res://Enemy.gd"]
 
 project_settings=Rect2(182, 135, 900, 700)
 create_new_node=Rect2(246, 20, 900, 589)
+export=Rect2(302, 97, 675, 525)
 
 [color_picker]
 
