--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Area2D.gd", "res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://Enemy.gd", "res://global.gd", "res://healthbar.gd", "res://main.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
-selected_script="res://Enemy.gd"
+selected_script="res://main.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
