--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -17,7 +17,7 @@ Sprite2D:scale=true
 
 [editor_metadata]
 
-executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
+executable_path="S:/Godot_v4.2-stable_win64.exe"
 tile_snap_option=0
 tile_snap_subdiv=4.0
 tile_source_sort=0
@@ -37,7 +37,7 @@ scripts=["res://global.gd", "res://Enemy.gd"]
 
 project_settings=Rect2(182, 135, 900, 700)
 create_new_node=Rect2(246, 20, 900, 589)
-export=Rect2(302, 97, 675, 525)
+export=Rect2(302, 97, 675, 705)
 
 [color_picker]
 
