added background texture base

--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -16,6 +16,8 @@ ProgressBar:scale=true
 Sprite2D:scale=true
 CanvasLayer:scale=true
 MarginContainer:scale=true
+CenterContainer:scale=true
+TextureRect:scale=true
 
 [editor_metadata]
 
