Fixes for enemy and player script regarding attack

--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -21,7 +21,7 @@ TextureRect:scale=true
 
 [editor_metadata]
 
-executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
+executable_path="C:/Users/tanus/Downloads/Godot_v4.2-stable_win64.exe/Godot_v4.2-stable_win64.exe"
 tile_snap_option=0
 tile_snap_subdiv=4.0
 tile_source_sort=0
@@ -42,6 +42,7 @@ scripts=["res://global.gd", "res://Enemy.gd"]
 project_settings=Rect2(182, 135, 900, 700)
 create_new_node=Rect2(246, 20, 900, 589)
 export=Rect2(302, 97, 675, 705)
+editor_settings=Rect2(1245, 555, 1350, 1050)
 
 [color_picker]
 
