fixed tilemap offset and added tree

--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://Enemy.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://Sprites/", "res://Sprites/Environment/", "res://Sprites/Characters/", "res://Scripts/", "res://Scenes/", "res://Magik/")
-dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Environment/cornertile_2.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Environment/blue tree 2 anim.png")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,16 +29,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://Scenes/Inventory.tscn", "res://Scenes/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn", "res://Scenes/menu.tscn", "res://Scenes/options_menu.tscn", "res://Enemy.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn")
-current_scene="res://Scenes/main_char.tscn"
+current_scene="res://environments.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Area2D.gd", "res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://Scripts/Enemy.gd", "res://Scripts/global.gd", "res://healthbar.gd", "res://main.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd"]
-selected_script="res://Scripts/Character.gd"
+selected_script="res://Magik/options_menu.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
