added layers for parallax

--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -18,6 +18,10 @@ CanvasLayer:scale=true
 MarginContainer:scale=true
 CenterContainer:scale=true
 TextureRect:scale=true
+ParallaxBackground:scroll_base_scale=true
+ParallaxBackground:scale=true
+ParallaxLayer:motion_scale=true
+ParallaxLayer:scale=true
 
 [editor_metadata]
 
