--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=180
-dock_hsplit_3=-203
+dock_hsplit_3=-206
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -29,16 +29,15 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Scenes/menu.tscn", "res://Scenes/options_menu.tscn", "res://Enemy.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn", "res://background.tscn", "res://Scenes/death_screen.tscn", "res://Scenes/Inventory.tscn", "res://Scenes/win_screen.tscn")
-current_scene="res://Scenes/win_screen.tscn"
+current_scene="res://main.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=12
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Area2D.gd", "res://Scripts/Character.gd", "res://Scenes/Control.gd", "res://Scripts/damaging.gd", "res://Scenes/death_screen.gd", "res://Scripts/Enemy.gd", "res://Scripts/global.gd", "res://healthbar.gd", "res://main.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd", "res://Scenes/win_screen.gd"]
-selected_script="res://Scenes/death_screen.gd"
+selected_script="res://Scripts/Area2D.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
